--- a/front/pubspec.yaml
+++ b/front/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_web_plugins:
     sdk: flutter
+  fl_chart: ^0.69.2
+  
 
 dev_dependencies:
   flutter_test:
