--- a/front/pubspec.yaml
+++ b/front/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   fl_chart: ^0.69.2
   google_fonts: ^6.2.1
+  flutter_staggered_grid_view: ^0.7.0
   
 
 dev_dependencies:
