--- a/front/pubspec.yaml
+++ b/front/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   fl_chart: ^0.70.1
   google_fonts: ^6.2.1
   flutter_staggered_grid_view: ^0.7.0
+  dio: ^5.7.0
   
 
 dev_dependencies:
