--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,41 +1,24 @@
-name: Deploy to GitHub Pages
+name: Build and distribute
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  build-and-deploy:
+  build:
+    name: build
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
-    - name: Set up Docker
-      uses: docker/setup-buildx-action@v2
+      - uses: cedvdb/action-flutter-build-web@v1
+        with:
+          build-cmd: flutter build web --release
+          working-directory: ./front
 
-    - name: Install Docker Compose
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y docker-compose
-
-    - name: Build Docker containers
-      run: |
-        docker-compose -f docker-compose.yaml build
-
-    - name: Collect built frontend files
-      run: |
-        docker-compose -f docker-compose.yml up -d front
-        docker cp flutter_builder:/app/build/web ./build-web
-        docker-compose -f docker-compose.yml down
-
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./build-web
+      - name: Archive Production artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: release
+          path: front/build/web
