--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,3 +22,19 @@ jobs:
         with:
           name: release
           path: front/build/web
+  deploy:
+    needs: build
+
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
