--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,9 @@ jobs:
       - name: Archive Production artifact
         uses: actions/upload-artifact@v3
         with:
-          name: release
+          name: github-pages
           path: front/build/web
+          
   deploy:
     needs: build
 
