--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
 
       - uses: cedvdb/action-flutter-build-web@v1
         with:
-          build-cmd: flutter build web --release
+          build-cmd: flutter build web --release --base-href /analyticsProfession/
           working-directory: ./front
 
       - name: Upload static files as artifact
