--- a/front/pubspec.yaml
+++ b/front/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_staggered_grid_view: ^0.7.0
   dio: ^5.7.0
+  colorlizer: ^0.0.4
   
 
 dev_dependencies:
