--- a/front/pubspec.yaml
+++ b/front/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   dio: ^5.7.0
   colorlizer: ^0.0.4
+  expansion_tile_group: ^2.2.0
+  expansion_widget: ^0.1.0
   
 
 dev_dependencies:
