--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
 
       - uses: cedvdb/action-flutter-build-web@v1
         with:
-          build-cmd: flutter build web --release --wasm --base-href /analyticsProfession/
+          build-cmd: flutter build web --release --wasm --base-href /AnalystInNumbers/
           working-directory: ./front
           
       - name: Create 404.html
